Fix cards not wrapping, and add more dummy books

--- a/css/index.css
+++ b/css/index.css
@@ -145,11 +145,11 @@ input.form-control {
 }
 
 .cards {
-	max-width: 900px;
+	width: 80%;
 
 	justify-self: center;
 	display: grid;
-	grid-template-columns: repeat(auto-fill, 215px);
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 	gap: 10px;
 }
 
